# paipi

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc_tests  AUTHORS.md  Makefile  README.md  SOURCE.md  SOURCE_UI.md  junit.xml  package-lock.json  pyproject.toml  tox.ini
.github/workflows/: build.yml  publish_to_pypi.yml  tox.yml
docs/: notes.md
examples/: run_integration_test.py
paipi/: __about__.py  __init__.py  __main__.py  cache_manager.py  client.py  client_base.py  client_readme.py  client_search.py  config.py  generate_package.py  logger.py  main.py  main_package_glue.py  models.py  onboarding.py  openrouter_models.py  package_cache.py  package_names.py  pypi_scraper.py
paipi-app/: .gitignore  README.md  angular.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
paipi-app/src/: index.html  styles.css
paipi-app/src/app/: app.html  app.spec.ts  app.ts  app.ts.x  models.ts  package_page.html  package_page.ts
paipi/coder/: cli.py  generate_package.py
paipi/coder/templates/: generate_library.py.j2
pypi_bench/: README.md  __main__.py  config.json  main.py  requirements.tx
scripts/: basic_checks.sh  make_source.sh  make_source_ui.sh
test/: conftest.py  test_api.py  test_cache_manager.py  test_client_base.py  test_client_readme.py  test_client_search.py  test_coder.py  test_coder_cli.py  test_config.py  test_entry_new.py  test_initial.py  test_main_new.py  test_main_package_glue.py  test_models.py  test_onboarding.py  test_openrouter_models.py  test_package_cache.py  test_pypi_scraper.py  test_pypi_scraper_new.py
