[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paipi"
version = "0.1.0"
description = "PyPI search, except the backend is an LLM's pixelated memory of PyPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "untruncate_json",
    "httpx>=0.25.0",
    "pypi_json"

]

[dependency-groups]
dev = [
    "types-requests",
    "git2md; python_version >= '3.10'",
    "pyclean; python_version >= '3.12'",
    "strip-docs>=1.0; python_version >= '3.12'",
    "gha-update; python_version >= '3.12'",
    "mkdocstrings[python]",
    "mkdocs; python_version >= '3.12'",
    "mdformat",
    # plugin finder
    "packaging; python_version >= '3.8'",
    # mpy
    "mypy; python_version >= '3.8'",
    "types-toml; python_version >= '3.8'",
    # reports

    # build
    "vermin; python_version >= '3.8'",
    "metametameta>=0.1.3; python_version >= '3.9'",
    "hatchling; python_version >= '3.8'",
    "ruff>=0.12.0; python_version >= '3.8'",
    "pylint; python_version >= '3.8'",
    "bandit; python_version >= '3.8'",
    "pre-commit; python_version >= '3.8'",
    # testing tools
    "pytest; python_version >= '3.8'",
    "pytest-cov; python_version >= '3.8'",
    "pytest-xdist>=3.5.0; python_version >= '3.8'",
    "pytest-randomly>=3.15.0; python_version >= '3.8'",
    "pytest-sugar>=0.9.7; python_version >= '3.8'",
    "pytest-mock; python_version >= '3.8'",
    "pytest-unused-fixtures; python_version >= '3.10'",
    "hypothesis[cli]; python_version >= '3.8'",
    "detect-test-pollution",
    "pytest-timeout>=2.4.0",
    # docs
    "interrogate>=1.5.0; python_version >= '3.8'",
    "pydoctest==0.2.1; python_version >= '3.8'",
    "pdoc3>=0.5.0; python_version >= '3.8'",
    "mdformat>=0.5.0; python_version >= '3.8'",
    "linkcheckmd>=1.4.0; python_version >= '3.8'",
    "codespell>=2.2.6; python_version >= '3.8'",
    "pyenchant>=3.2.2; python_version >= '3.8'",
]

[project.urls]
Homepage = "https://github.com/matthewdeanmartin/paipi"
Repository = "https://github.com/matthewdeanmartin/paipi"

[project.scripts]
paipi = "paipi.main:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
# python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true